--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   get_it: ^8.2.0
+  go_router: ^16.2.2
   gyro_provider: ^0.1.0
   udp: ^5.0.3
   watch_it: ^1.7.0
